--- a/AmenityExpress/AmenityExpress.csproj
+++ b/AmenityExpress/AmenityExpress.csproj
@@ -197,6 +197,12 @@
     <Compile Include="RoomManagement\DialogForm.Designer.cs">
       <DependentUpon>DialogForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="RoomManagement\DialogForm2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RoomManagement\DialogForm2.Designer.cs">
+      <DependentUpon>DialogForm2.cs</DependentUpon>
+    </Compile>
     <Compile Include="RoomManagement\Pay_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -225,6 +231,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RoomManagement\DialogForm2.resx">
+      <DependentUpon>DialogForm2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RoomManagement\RoomSearchM_Form.resx">
+      <DependentUpon>RoomSearchM_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
       <SubType>Designer</SubType>
     </None>
