--- a/AmenityExpress/AmenityExpress.csproj
+++ b/AmenityExpress/AmenityExpress.csproj
@@ -215,6 +215,15 @@
     <Compile Include="RoomManagement\RoomSearch_Form.Designer.cs">
       <DependentUpon>RoomSearch_Form.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="dbtest.resx">
+      <DependentUpon>dbtest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main\CutomerMainUI.resx">
+      <DependentUpon>CutomerMainUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -225,6 +234,24 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reserve\Pay_Form.resx">
+      <DependentUpon>Pay_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reserve\Reservcheck_Form.resx">
+      <DependentUpon>Reservcheck_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reserve\Reservlist_Form.resx">
+      <DependentUpon>Reservlist_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reserve\Reserv_Form.resx">
+      <DependentUpon>Reserv_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RoomManagement\Pay_Form.resx">
+      <DependentUpon>Pay_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RoomManagement\RoomSearch_Form.resx">
+      <DependentUpon>RoomSearch_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
       <SubType>Designer</SubType>
     </None>
