--- a/AmenityExpress/AmenityExpress.csproj
+++ b/AmenityExpress/AmenityExpress.csproj
@@ -221,8 +221,14 @@
     <EmbeddedResource Include="Main\CutomerMainUI.resx">
       <DependentUpon>CutomerMainUI.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Main\ManagerMainUI.resx">
+      <DependentUpon>ManagerMainUI.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Manager\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager\SignUp.resx">
+      <DependentUpon>SignUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
