--- a/AmenityExpress/AmenityExpress.csproj
+++ b/AmenityExpress/AmenityExpress.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBRoomConnect.cs" />
     <Compile Include="Manager\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -215,11 +216,11 @@
     <Compile Include="RoomManagement\RoomInformRetouching.Designer.cs">
       <DependentUpon>RoomInformRetouching.cs</DependentUpon>
     </Compile>
-    <Compile Include="RoomManagement\RoomSearch_Form.cs">
+    <Compile Include="RoomManagement\RoomCheck.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RoomManagement\RoomSearch_Form.Designer.cs">
-      <DependentUpon>RoomSearch_Form.cs</DependentUpon>
+    <Compile Include="RoomManagement\RoomCheck.Designer.cs">
+      <DependentUpon>RoomCheck.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -233,6 +234,9 @@
     </Compile>
     <EmbeddedResource Include="RoomManagement\ManagerRoomCheck.resx">
       <DependentUpon>ManagerRoomCheck.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RoomManagement\RoomCheck.resx">
+      <DependentUpon>RoomCheck.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RoomManagement\RoomInFormAdd.resx">
       <DependentUpon>RoomInFormAdd.cs</DependentUpon>
