--- a/AmenityExpress/AmenityExpress.csproj
+++ b/AmenityExpress/AmenityExpress.csproj
@@ -117,17 +117,11 @@
     <Compile Include="Main\MoneyUI.Designer.cs">
       <DependentUpon>MoneyUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manager\Member.cs">
+    <Compile Include="Manager\ClientInformMangement.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manager\Member.Designer.cs">
-      <DependentUpon>Member.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Manager\MemberInformRetouch.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Manager\MemberInformRetouch.Designer.cs">
-      <DependentUpon>MemberInformRetouch.cs</DependentUpon>
+    <Compile Include="Manager\ClientInformMangement.Designer.cs">
+      <DependentUpon>ClientInformMangement.cs</DependentUpon>
     </Compile>
     <Compile Include="Manager\SignUp.cs">
       <SubType>Form</SubType>
@@ -221,11 +215,14 @@
     <Compile Include="RoomManagement\RoomSearch_Form.Designer.cs">
       <DependentUpon>RoomSearch_Form.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Manager\Member.resx">
-      <DependentUpon>Member.cs</DependentUpon>
+    <EmbeddedResource Include="Manager\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manager\MemberInformRetouch.resx">
-      <DependentUpon>MemberInformRetouch.cs</DependentUpon>
+    <EmbeddedResource Include="Manager\ClientInformMangement.resx">
+      <DependentUpon>ClientInformMangement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager\SignUp.resx">
+      <DependentUpon>SignUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
