--- a/AmenityExpress/AmenityExpress.csproj
+++ b/AmenityExpress/AmenityExpress.csproj
@@ -94,6 +94,18 @@
       <DependentUpon>dbtest.cs</DependentUpon>
     </Compile>
     <Compile Include="entity.cs" />
+    <Compile Include="Manager\ClientInformMangement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\ClientInformMangement.Designer.cs">
+      <DependentUpon>ClientInformMangement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manager\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Main\CutomerMainUI.cs">
@@ -113,9 +125,6 @@
     </Compile>
     <Compile Include="Main\MoneyUI.Designer.cs">
       <DependentUpon>MoneyUI.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Manager\ClientInformMangement.Designer.cs">
-      <DependentUpon>ClientInformMangement.cs</DependentUpon>
     </Compile>
     <Compile Include="Manager\SignUp.cs">
       <SubType>Form</SubType>
@@ -216,8 +225,8 @@
     <EmbeddedResource Include="Manager\ClientInformMangement.resx">
       <DependentUpon>ClientInformMangement.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manager\SignUp.resx">
-      <DependentUpon>SignUp.cs</DependentUpon>
+    <EmbeddedResource Include="Manager\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
