--- a/AmenityExpress/AmenityExpress.csproj
+++ b/AmenityExpress/AmenityExpress.csproj
@@ -106,6 +106,12 @@
     <Compile Include="Manager\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manager\MemberInformFix.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\MemberInformFix.Designer.cs">
+      <DependentUpon>MemberInformFix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Main\CutomerMainUI.cs">
@@ -227,6 +233,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager\MemberInformFix.resx">
+      <DependentUpon>MemberInformFix.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
