Entity && control class && customerMainUI
엔티티 클래스에 DB등록,삭제,데이터로드, 함수 추가 완료, DBRoomRoad클래스 삭제,
버튼 이벤트에 있는 등록, 삭제 기능 컨트롤 클래스로 나눴음. 현재 수정기능 에러 발생(roomNum 변경 안됨)

--- a/AmenityExpress/AmenityExpress.csproj
+++ b/AmenityExpress/AmenityExpress.csproj
@@ -85,7 +85,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DBRoomConnect.cs" />
     <Compile Include="DBConnector.cs" />
     <Compile Include="dbtest.cs">
       <SubType>Form</SubType>
@@ -216,12 +215,20 @@
     <Compile Include="RoomManagement\RoomInFormAdd.Designer.cs">
       <DependentUpon>RoomInFormAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="RoomManagement\RoomInformationadd.cs" />
+    <Compile Include="RoomManagement\RoomInformation_Del.cs" />
     <Compile Include="RoomManagement\RoomInformRetouching.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="RoomManagement\RoomInformRetouching.Designer.cs">
       <DependentUpon>RoomInformRetouching.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Main\CutomerMainUI.resx">
+      <DependentUpon>CutomerMainUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main\ManagerMainUI.resx">
+      <DependentUpon>ManagerMainUI.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Manager\ClientInformMangement.resx">
       <DependentUpon>ClientInformMangement.cs</DependentUpon>
     </EmbeddedResource>
