feature: Control & Entity Class
control 클래스에 RequestWriteEnroll 메소드, RequestAnswerEnroll 메소드 추가/ entity 클래스에 CheckAnswer 메소드(bool), CheckRequest 메소드(bool) 추가
다른 분들이 만드신 control 클래스는 제가 만든 control클래스에 다 박으면 될 것 같네용

--- a/AmenityExpress/AmenityExpress.csproj
+++ b/AmenityExpress/AmenityExpress.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="control.cs" />
     <Compile Include="DBRoomConnect.cs" />
     <Compile Include="DBConnector.cs" />
     <Compile Include="dbtest.cs">
